# mat-chem-sim-pred

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  FAQ.md  LICENSE  OAT.xml  PR_DESCRIPTION.md  PR_DESCRIPTION_PID_MODEL_FIT.md  README.md  milestone.md  pr_body.json  roadmap.md
prediction/ProcessControl/PIDModelFit/pid_fopdt_batch_rollout_score/: CMakeLists.txt  README.md
prediction/ProcessControl/PIDModelFit/pid_fopdt_batch_rollout_score/docs/: algorithm.md  api_reference.md  benchmark.md
prediction/ProcessControl/PIDModelFit/pid_fopdt_batch_rollout_score/examples/: test_aclnn_pid_fopdt_batch_rollout_score.cpp
prediction/ProcessControl/PIDModelFit/pid_fopdt_batch_rollout_score/op_host/: pid_fopdt_batch_rollout_score_def.cpp  pid_fopdt_batch_rollout_score_host.cpp  pid_fopdt_batch_rollout_score_host.h
prediction/ProcessControl/PIDModelFit/pid_fopdt_batch_rollout_score/op_kernel/: pid_fopdt_batch_rollout_score_kernel.cpp
prediction/ProcessControl/PIDModelFit/pid_fopdt_batch_rollout_score/tests/: benchmark_pid_fopdt_batch_rollout_score.py  benchmark_pid_fopdt_batch_rollout_score_aclnn.cpp  test_pid_fopdt_batch_rollout_score.py
prediction/ProcessControl/PIDModelFit/pid_ipdt_basis_gemm_fit/: CMakeLists.txt  README.md
prediction/ProcessControl/PIDModelFit/pid_ipdt_basis_gemm_fit/docs/: algorithm.md  api_reference.md  benchmark.md
prediction/ProcessControl/PIDModelFit/pid_ipdt_basis_gemm_fit/examples/: test_aclnn_pid_ipdt_basis_gemm_fit.cpp
prediction/ProcessControl/PIDModelFit/pid_ipdt_basis_gemm_fit/op_host/: pid_ipdt_basis_gemm_fit_def.cpp  pid_ipdt_basis_gemm_fit_host.cpp  pid_ipdt_basis_gemm_fit_host.h
prediction/ProcessControl/PIDModelFit/pid_ipdt_basis_gemm_fit/op_kernel/: pid_ipdt_basis_gemm_fit_kernel.cpp
prediction/ProcessControl/PIDModelFit/pid_ipdt_basis_gemm_fit/tests/: benchmark_pid_ipdt_basis_gemm_fit.py  benchmark_pid_ipdt_basis_gemm_fit_aclnn.cpp  benchmark_pid_ipdt_basis_gemm_pipeline_aclnn.cpp  test_pid_ipdt_basis_gemm_fit.py
prediction/ProcessControl/TimeSeriesForecast/autocorr_fused_aggregate/: CMakeLists.txt  README.md
prediction/ProcessControl/TimeSeriesForecast/batch_spd_inv_fp32/: CMakeLists.txt  README.md
prediction/ProcessControl/TimeSeriesForecast/tirex_slstm_cell/: CMakeLists.txt  README.md
scientific-computing/Dissipative_particle_dynamics/: CMakeLists.txt  README.md  test_simple
scientific-computing/Dissipative_particle_dynamics/docs/: dpd_op_design.md
scientific-computing/Dissipative_particle_dynamics/examples/: CMakeLists.txt  dpd_ascendc_demo.cpp  dpd_complete_demo.py  example_config.json.in
scientific-computing/Dissipative_particle_dynamics/op_host/: dpd_host.cpp  dpd_host.h  dpd_host_continued.cpp
scientific-computing/Dissipative_particle_dynamics/op_kernel/: dpd_kernel.cpp
scientific-computing/Dissipative_particle_dynamics/python/: dpd_op.py
scientific-computing/Dissipative_particle_dynamics/tests/: CMakeLists.txt
scientific-computing/Dissipative_particle_dynamics/tests/ut/: CMakeLists.txt
scientific-computing/Lennard_Jones/: CMakeLists.txt
scientific-computing/Lennard_Jones/op_host/: CMakeLists.txt
scientific-computing/SHAKE/: CMakeLists.txt
scientific-computing/SHAKE/docs/: algorithm.md
scientific-computing/SHAKE/op_host/: shake.h  shake_host.h
scientific-computing/SHAKE/op_kernel/: shake.cpp  shake_kernel.h
simulation/AI4MD/Dissipative_particle_dynamics/op_host/: CMakeLists.txt  dpd_host_continued.cpp  dpd_params.h
simulation/AI4MD/Dissipative_particle_dynamics/op_kernel/: CMakeLists.txt  dpd_kernel.h  dpd_tiling.cpp  dpd_tiling.h
simulation/AI4MD/GAFF2/: CMakeLists.txt  README.md
simulation/AI4MD/GAFF2/examples/: test_gaff2.cpp
simulation/AI4MD/GAFF2/op_host/: gaff2_device_aiv_bin.inc  gaff2_host.cpp  gaff2_host.h
simulation/AI4MD/GAFF2/op_kernel/: gaff2_force.cpp
simulation/AI4MD/PME/: CMakeLists.txt  README.md
simulation/AI4MD/PME/docs/: algorithm.md
simulation/AI4MD/PME/examples/: README.md  test_pme.cpp
simulation/AI4MD/PME/op_host/: ewald_device_aiv_bin.inc  ewald_host.h  pme_device_aiv_bin.inc  pme_host2.cpp  pme_host2.h
simulation/AI4MD/PME/op_kernel/: ewald_kernel.cpp  ewald_recip.h  pme_fft3d.h  pme_kernel.cpp
simulation/AI4MD/velocity-verlet/: CMakeLists.txt
simulation/AI4MD/velocity-verlet/examples/: README.md
simulation/AI4MD/velocity-verlet/op_host/: gen_vv_inc.py  thermo_scale_device_aiv_bin.inc  velocity_verlet.h  vv_host.cpp  vv_host.h
simulation/AI4PDE/: CMakeLists.txt  README.md  SCHEDULER.md  build.sh
simulation/AI4PDE/deeponet/: CMakeLists.txt
simulation/AI4PDE/deeponet/examples/: test_aclnn_deeponet.cpp
simulation/AI4PDE/deeponet/op_host/: deeponet_def.cpp  deeponet_host.cpp  deeponet_host.h
simulation/AI4PDE/deeponet/op_kernel/: deeponet_kernel.cpp  deeponet_kernel.h
simulation/AI4PDE/deeponet/tests/: benchmark_deeponet.py  test_deeponet.py
simulation/AI4PDE/deeponet/tests/ut/: CMakeLists.txt
simulation/AI4PDE/fno/: CMakeLists.txt
simulation/AI4PDE/fno/examples/: test_aclnn_fno.cpp
simulation/AI4PDE/fno/op_host/: fno_def.cpp  fno_host.cpp  fno_host.h
simulation/AI4PDE/fno/op_kernel/: fno_kernel.cpp  fno_kernel.h
simulation/AI4PDE/fno/tests/: benchmark_fno.py  test_fno.py
simulation/AI4PDE/mesh_graph_net/: CMakeLists.txt
simulation/AI4PDE/mesh_graph_net/examples/: test_aclnn_mesh_graph_net.cpp
simulation/AI4PDE/mesh_graph_net/op_host/: mesh_graph_net_def.cpp  mesh_graph_net_host.cpp  mesh_graph_net_host.h
simulation/AI4PDE/mesh_graph_net/op_kernel/: mesh_graph_net_kernel.cpp  mesh_graph_net_kernel.h
simulation/AI4PDE/mesh_graph_net/tests/: benchmark_mesh_graph_net.py  test_mesh_graph_net.py
simulation/AI4PDE/pde_common/: pde_math.h  pde_types.h
simulation/AI4PDE/pinn/: CMakeLists.txt
simulation/AI4PDE/pinn/examples/: test_aclnn_pinn.cpp
simulation/AI4PDE/pinn/op_host/: pinn_def.cpp  pinn_host.cpp  pinn_host.h
simulation/AI4PDE/pinn/op_kernel/: pinn_kernel.cpp  pinn_kernel.h
simulation/AI4PDE/pinn/tests/: CMakeLists.txt  benchmark_pinn.py  test_pinn.py
(+510 files in other folders)
